--- a/index.html
+++ b/index.html
@@ -8,32 +8,34 @@
   <title>Password Health Checker | Free Online Password Strength Test & Generator</title>
   <meta name="title" content="Password Health Checker | Free Online Password Strength Test & Generator" />
   <meta name="description" content="Check your password strength instantly and generate secure passwords with our free, 100% client-side tools. Nothing leaves your device." />
+  <!-- Keep canonical pointed to your final domain (OK while staging on GH Pages) -->
   <link rel="canonical" href="https://www.passwordhealthchecker.com/" />
 
-  <!-- Open Graph -->
+  <!-- Open Graph (use absolute GH Pages URLs for staging) -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://www.passwordhealthchecker.com/" />
+  <meta property="og:url" content="https://dragonfirecreative.github.io/passwordhealthchecker/" />
   <meta property="og:title" content="Password Health Checker | Free Online Password Strength Test & Generator" />
   <meta property="og:description" content="Boost your security with a free password checker and generator — private and 100% client-side." />
-  <meta property="og:image" content="https://www.passwordhealthchecker.com/og-image.png" />
+  <meta property="og:image" content="https://dragonfirecreative.github.io/passwordhealthchecker/og-image.png" />
 
-  <!-- Twitter -->
+  <!-- Twitter (absolute GH Pages URLs for staging) -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:url" content="https://www.passwordhealthchecker.com/" />
+  <meta name="twitter:url" content="https://dragonfirecreative.github.io/passwordhealthchecker/" />
   <meta name="twitter:title" content="Password Health Checker | Free Online Password Strength Test & Generator" />
   <meta name="twitter:description" content="Free password strength checker and generator — nothing leaves your device." />
-  <meta name="twitter:image" content="https://www.passwordhealthchecker.com/og-image.png" />
+  <meta name="twitter:image" content="https://dragonfirecreative.github.io/passwordhealthchecker/og-image.png" />
 
   <!-- Helpful -->
   <meta name="author" content="Dragonfire Creative Studio" />
   <meta name="keywords" content="password strength checker, secure password generator, free password tool, client-side security" />
 
-  <!-- Favicons + PWA -->
-  <link rel="icon" href="/favicon.ico" sizes="any">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-  <link rel="manifest" href="/site.webmanifest">
+  <!-- Favicons + PWA (relative paths for GH Pages) -->
+  <link rel="icon" href="favicon.ico" sizes="any">
+  <link rel="shortcut icon" href="favicon.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+  <link rel="apple-touch-icon" href="apple-touch-icon.png">
+  <link rel="manifest" href="site.webmanifest">
   <meta name="theme-color" content="#00BFFF" />
 
   <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "526649c52b894849b9757e54098a8a3f"}'></script><!-- End Cloudflare Web Analytics -->
