--- a/about.html
+++ b/about.html
@@ -10,31 +10,33 @@
   <meta name="description" content="Learn how Password Health Checker keeps your data private. Free, 100% client-side password strength checker and generator — nothing leaves your device." />
   <link rel="canonical" href="https://www.passwordhealthchecker.com/about.html" />
 
-  <!-- Open Graph -->
+  <!-- Open Graph (absolute GH Pages URLs for staging) -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://www.passwordhealthchecker.com/about.html" />
+  <meta property="og:url" content="https://dragonfirecreative.github.io/passwordhealthchecker/about.html" />
   <meta property="og:title" content="About Password Health Checker | Secure, Private & Free" />
   <meta property="og:description" content="Our mission: simple, powerful security tools with total privacy. Free, 100% client-side password checker & generator." />
-  <meta property="og:image" content="https://www.passwordhealthchecker.com/og-about.png" />
+  <meta property="og:image" content="https://dragonfirecreative.github.io/passwordhealthchecker/og-about.png" />
 
-  <!-- Twitter -->
+  <!-- Twitter (absolute GH Pages URLs for staging) -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:url" content="https://www.passwordhealthchecker.com/about.html" />
+  <meta name="twitter:url" content="https://dragonfirecreative.github.io/passwordhealthchecker/about.html" />
   <meta name="twitter:title" content="About Password Health Checker | Secure, Private & Free" />
   <meta name="twitter:description" content="Free, 100% client-side password tools. Learn how we keep your data private." />
-  <meta name="twitter:image" content="https://www.passwordhealthchecker.com/og-about.png" />
+  <meta name="twitter:image" content="https://dragonfirecreative.github.io/passwordhealthchecker/og-about.png" />
 
   <!-- Helpful -->
   <meta name="author" content="Dragonfire Creative Studio" />
   <meta name="keywords" content="about password health checker, password strength checker, secure password generator, client-side security, privacy" />
 
-  <!-- Favicons + PWA -->
-  <link rel="icon" href="/favicon.ico" sizes="any">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-  <link rel="manifest" href="/site.webmanifest">
+  <!-- Favicons + PWA (relative paths for GH Pages) -->
+  <link rel="icon" href="favicon.ico" sizes="any">
+  <link rel="shortcut icon" href="favicon.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+  <link rel="apple-touch-icon" href="apple-touch-icon.png">
+  <link rel="manifest" href="site.webmanifest">
   <meta name="theme-color" content="#00BFFF" />
+
 
   <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "526649c52b894849b9757e54098a8a3f"}'></script><!-- End Cloudflare Web Analytics -->
 
@@ -172,3 +174,4 @@
     </footer>
 </body>
 </html>
+
