--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -11,30 +11,31 @@
   <meta name="robots" content="noindex,follow" />
   <link rel="canonical" href="https://www.passwordhealthchecker.com/privacy-policy.html" />
 
-  <!-- Open Graph -->
+  <!-- Open Graph (absolute GH Pages URLs for staging) -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://www.passwordhealthchecker.com/privacy-policy.html" />
+  <meta property="og:url" content="https://dragonfirecreative.github.io/passwordhealthchecker/privacy-policy.html" />
   <meta property="og:title" content="Privacy Policy | Password Health Checker" />
   <meta property="og:description" content="Your privacy matters. No tracking, no cookies, no data collection — all processing is 100% client-side." />
-  <meta property="og:image" content="https://www.passwordhealthchecker.com/og-privacy.png" />
+  <meta property="og:image" content="https://dragonfirecreative.github.io/passwordhealthchecker/og-privacy.png" />
 
-  <!-- Twitter -->
+  <!-- Twitter (absolute GH Pages URLs for staging) -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:url" content="https://www.passwordhealthchecker.com/privacy-policy.html" />
+  <meta name="twitter:url" content="https://dragonfirecreative.github.io/passwordhealthchecker/privacy-policy.html" />
   <meta name="twitter:title" content="Privacy Policy | Password Health Checker" />
   <meta name="twitter:description" content="No tracking or data collection — password tools run entirely in your browser." />
-  <meta name="twitter:image" content="https://www.passwordhealthchecker.com/og-privacy.png" />
+  <meta name="twitter:image" content="https://dragonfirecreative.github.io/passwordhealthchecker/og-privacy.png" />
 
   <!-- Helpful -->
   <meta name="author" content="Dragonfire Creative Studio" />
   <meta name="keywords" content="password privacy policy, client-side security, password checker privacy" />
 
-  <!-- Favicons + PWA -->
-  <link rel="icon" href="/favicon.ico" sizes="any">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-  <link rel="manifest" href="/site.webmanifest">
+  <!-- Favicons + PWA (relative paths for GH Pages) -->
+  <link rel="icon" href="favicon.ico" sizes="any">
+  <link rel="shortcut icon" href="favicon.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+  <link rel="apple-touch-icon" href="apple-touch-icon.png">
+  <link rel="manifest" href="site.webmanifest">
   <meta name="theme-color" content="#00BFFF" />
 
   <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "526649c52b894849b9757e54098a8a3f"}'></script><!-- End Cloudflare Web Analytics -->
@@ -131,3 +132,4 @@
     </footer>
 </body>
 </html>
+
