--- a/404.html
+++ b/404.html
@@ -3,14 +3,38 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Page Not Found | Password Health Checker</title>
-  <link rel="icon" href="/favicon.ico" sizes="any">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-  <link rel="manifest" href="/site.webmanifest">
-  <meta name="theme-color" content="#00BFFF" />
 
+  <!-- Primary -->
+  <title>404 Page Not Found | Password Health Checker</title>
+  <meta name="description" content="The page you’re looking for does not exist. Return to the homepage and check your password security." />
+  <meta name="robots" content="noindex,follow" /> <!-- Don't index, but let crawlers follow links -->
+  <link rel="canonical" href="https://www.passwordhealthchecker.com/404.html" />
+
+  <!-- Open Graph (absolute GH Pages URL for staging) -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://dragonfirecreative.github.io/passwordhealthchecker/404.html" />
+  <meta property="og:title" content="404 Page Not Found | Password Health Checker" />
+  <meta property="og:description" content="The page you’re looking for does not exist. Head back to Password Health Checker to try our free tools." />
+  <meta property="og:image" content="https://dragonfirecreative.github.io/passwordhealthchecker/og-404.png" />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:url" content="https://dragonfirecreative.github.io/passwordhealthchecker/404.html" />
+  <meta name="twitter:title" content="404 Page Not Found | Password Health Checker" />
+  <meta name="twitter:description" content="The page you’re looking for does not exist. Head back to Password Health Checker to try our free tools." />
+  <meta name="twitter:image" content="https://dragonfirecreative.github.io/passwordhealthchecker/og-404.png" />
+
+  <!-- Helpful -->
+  <meta name="author" content="Dragonfire Creative Studio" />
+
+  <!-- Favicons + PWA (relative paths for GH Pages) -->
+  <link rel="icon" href="favicon.ico" sizes="any">
+  <link rel="shortcut icon" href="favicon.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+  <link rel="apple-touch-icon" href="apple-touch-icon.png">
+  <link rel="manifest" href="site.webmanifest">
+  <meta name="theme-color" content="#00BFFF" />
   <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "526649c52b894849b9757e54098a8a3f"}'></script>
   <!-- End Cloudflare Web Analytics -->
 
@@ -31,3 +55,4 @@
   <a href="/" class="bg-[#00BFFF] text-white font-semibold py-3 px-6 rounded-lg shadow-md hover:bg-[#0099cc] transition">Go Home</a>
 </body>
 </html>
+
